# SecBench

./: .gitignore  README.md  pyproject.toml
packaging/: build_linux.sh  build_macos.sh  build_windows.ps1  pyinstaller-secbench.spec
src/secbench/: __init__.py  __main__.py  app.py  cli.py  config.py  elevation.py  logging_setup.py
src/secbench/auth/: __init__.py  base.py  device_code.py  interactive.py  manager.py  service_principal.py
src/secbench/azure_client/: __init__.py  arm.py  cache.py  graph.py
src/secbench/benchmarks/: __init__.py
src/secbench/benchmarks/_linux_common/: __init__.py  checks.py
src/secbench/benchmarks/_windows_common/: __init__.py  checks.py
src/secbench/benchmarks/azure_compute_2_0_0/: __init__.py  catalog.yaml  section_1_vm.py  section_2_aks.py  section_3_acr.py  section_4_aci.py  section_5_functions.py
src/secbench/benchmarks/azure_compute_win_server_2019_1_0_0/: __init__.py  catalog.yaml  checks.py
src/secbench/benchmarks/azure_compute_win_server_2022_1_0_0/: __init__.py  catalog.yaml  checks.py
src/secbench/benchmarks/azure_database_2_0_0/: __init__.py  catalog.yaml  section_1_sql.py  section_2_postgres.py  section_3_mysql.py  section_4_cosmos.py  section_5_synapse.py
src/secbench/benchmarks/azure_foundations_6_0_0/: __init__.py  catalog.yaml  section_10_misc.py  section_1_iam.py  section_2_defender.py  section_3_storage.py  section_4_database.py  section_5_logging.py  section_6_networking.py  section_7_vm.py  section_8_keyvault.py  section_9_appservice.py
src/secbench/benchmarks/azure_storage_1_0_0/: __init__.py  catalog.yaml  section_1_account.py  section_2_blob.py  section_3_file.py  section_4_queue_table.py
src/secbench/benchmarks/defender_av_1_0_0/: __init__.py  catalog.yaml  checks.py
src/secbench/benchmarks/m365_foundations_6_0_1/: __init__.py  catalog.yaml  section_1_admin.py  section_2_defender.py  section_3_purview.py  section_4_entra.py  section_5_exchange.py  section_6_sharepoint.py  section_7_teams.py  section_8_fabric.py  section_9_intune.py
src/secbench/benchmarks/macos_tahoe_1_0_0/: __init__.py  _helpers.py  catalog.yaml  section_1_updates.py  section_2_system.py  section_3_logging.py  section_4_network.py  section_5_auth.py  section_6_apps.py
src/secbench/benchmarks/rhel_10_1_0_1/: __init__.py  catalog.yaml  checks.py
src/secbench/benchmarks/rhel_8_4_0_0/: __init__.py  catalog.yaml  checks.py
src/secbench/engine/: __init__.py  catalog_loader.py  errors.py  helpers.py  models.py  progress.py  registry.py  runner.py
src/secbench/gui/: __init__.py  main_window.py  style.qss
src/secbench/reports/: __init__.py  csv_report.py  html_report.py  json_report.py  pdf_report.py
src/secbench/targets/: __init__.py  base.py  local.py  ssh.py
tests/: conftest.py  test_catalogs.py  test_engine_runner.py
(+45 files in other folders)
